stylesCalibrator.css
body{
  background-color: #fffde8;
  font-family: Arial, Helvetica, sans-serif;
  margin: 0px;
  padding: 0px;
  display: block;
}

.title {
  text-align: center;
}


header{
    background-color: #f9873a;
    height: 60px;
    display: flex;
    align-items: center;
    top: 0;
    overflow: hidden;
    position: sticky;
    position: -webkit-sticky;
}

header * {
   display: inline-block;
   padding: 5px;
}

.socialMedia {
  margin: 25px auto 0 auto;
  max-width: 229px;
}

.socialMedia *{
   display:inline-block;
   padding: 5px; 
}


li a {
  color: #000;
  text-decoration: none;
}

li a.active {
  color: firebrick;
}

li a:hover:not(.active) {
  color: firebrick;
}

  Button {
    background-color: coral;     
    border: none;    
    color: black;    
    padding: 15px 32px;    
    text-align: center;    
    text-decoration: none;    
    display: inline-block;    
    font-size: 16px;    
    margin: 4px 2px;   
    border-radius: 4px;
    border: 2px solid #f44336;
    -webkit-transition-duration: 0.4s;    
    transition-duration: 0.4s;
}
Button:hover {
    background-color: chocolate;     
    color: black; 
    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19)
}

.media{
  opacity: 0.7;
  transition: opacity .075s ease-in-out;
  -moz-transition: opacity 1s ease-in-out;
  -webkit-transition: opacity 1s ease-in-out
}

.media:hover{
  opacity: 1.0;
  transition: opacity .075s ease-in-out;
  -moz-transition: opacity .55s ease-in-out;
  -webkit-transition: opacity .55s ease-in-out;
}

.grid-container {
  display: grid;
  
  grid-template-columns: auto auto auto;
}
.grid-item {
  border: 1px solid rgba(0, 0, 0, 0.8);
  text-align: center;
}

.item1 {
  grid-column:1;
  }
  
  .item2 {
  grid-column:2;
  }
  
  .item3 {
  grid-column:3;
  }
  .item4{
  grid-column:4;
  grid-row: 1/span 4;
  }

